[project]
name = ""
version = ""
description = ""
authors = [
    {name = "J Doe", email = "j@example.com"},
]
dependencies = [
    "flask~=2.0",
    "redis~=3.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
